--- a/res/values/afterlife_strings.xml
+++ b/res/values/afterlife_strings.xml
@@ -16,4 +16,7 @@
 <resources>
     <!-- Application name -->
     <string name="afterlifeos_app_name" translatable="false">AfterHome</string>
+
+    <!-- Folder titles -->
+    <string name="google_folder_title" translatable="false">Google</string>
 </resources>
