[SQUASH] Launcher3: Bring back QuickSpace events
Launcher3: Bring back QuickSpace events

* This is wholesome squash of work done in 11.0 of crDroid Home
* History commits - https://github.com/crdroidandroid/android_packages_apps_Launcher3/commits/11.0/src/com/android/launcher3/quickspace

Co-authored-by: Chris <chris@cypheros.co>
Co-authored-by: El Dainosor <eldainosor@gmail.com>
Co-authored-by: Ali B <abittin@gmail.com>
Co-authored-by: Till Kottmann <me@deletescape.ch>
Co-authored-by: minaripenguin <minaripenguin@users.noreply.github.com>
Change-Id: I34cdbdfd873e2098e9bb991171e0323321b88cc0
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Signed-off-by: romeo <rbesar210311@gmail.com>

Launcher3: Quickspace: Apply at a glance widget design

Signed-off-by: Dmitrii <bankersenator@gmail.com>
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Signed-off-by: romeo <rbesar210311@gmail.com>

Launcher3: Quickspace: Do not pollute with greetings and fix NPE

Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Signed-off-by: romeo <rbesar210311@gmail.com>

Launcher3: Quickspace: Improve loading routines

Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Signed-off-by: romeo <rbesar210311@gmail.com>

Launcher3: Quickspace: Do not exceed 3 lines

Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Signed-off-by: romeo <rbesar210311@gmail.com>

Launcher3: Quickspace: Rewrite all the greetings

* Who tf drinks so much water?

Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Signed-off-by: romeo <rbesar210311@gmail.com>

Launcher3: Quickspace: Make weather condition text optional

Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Signed-off-by: romeo <rbesar210311@gmail.com>

Launcher3: Quickspace: Clean up and fix random message when disabled

Fixes: https://github.com/crdroidandroid/issue_tracker/issues/389
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Signed-off-by: romeo <rbesar210311@gmail.com>

Launcher3: Quickspace: Update deprecated media listeners

* attempt to 

--- a/res/drawable/bg_quickspace.xml
+++ b/res/drawable/bg_quickspace.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-     Copyright (C) 2016-2023 crDroid Android Project
+<!-- Copyright (C) 2018-2023 crDroid Android Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -14,11 +13,5 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<resources>
-
-    <!-- Appseat -->
-    <color name="appseat_color">@*android:color/system_neutral2_50</color>
-
-    <!-- Logo Color -->
-    <color name="afterlife_logo_icon_color">?android:attr/textColorPrimary</color>
-</resources>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle" />
