Launcher3: Disable wallpaper scrolling by default
Change-Id: I5870306bc7492437d5c079b7c7fdb7b1aecf3a0e
Signed-off-by: Aditya Eka Pranata <aepranata@gmail.com>

--- a/res/xml/launcher_preferences.xml
+++ b/res/xml/launcher_preferences.xml
@@ -97,10 +97,9 @@
         android:persistent="true" />
 
     <SwitchPreferenceCompat
-            android:key="pref_allow_wallpaper_scrolling"
-            android:title="@string/allow_wallpaper_scrolling"
-            android:summary="@string/allow_wallpaper_scrolling_summary"
-            android:defaultValue="true"
-            launcher:iconSpaceReserved="false" />
+        android:key="pref_allow_wallpaper_scrolling"
+        android:title="@string/allow_wallpaper_scrolling"
+        android:summary="@string/allow_wallpaper_scrolling_summary"
+        android:defaultValue="false" />
 
 </androidx.preference.PreferenceScreen>
