--- a/res/xml/launcher_misc_preferences.xml
+++ b/res/xml/launcher_misc_preferences.xml
@@ -46,6 +46,14 @@
         settings:units="px"
         android:defaultValue="23" />
 
+    <SwitchPreferenceCompat
+        android:key="pref_allow_cts"
+        android:title="@string/pref_allow_cts_title"
+        android:summary="@string/pref_allow_cts_summary"
+        android:defaultValue="@*android:bool/config_searchAllEntrypointsEnabledDefault"
+        launcher:iconSpaceReserved="false"
+        launcher:layout="@layout/afl_preference_single" />
+
     <androidx.preference.PreferenceScreen
         android:persistent="false"
         android:title="@string/suggestion_pref_screen_title"
