--- a/res/xml/launcher_preferences.xml
+++ b/res/xml/launcher_preferences.xml
@@ -96,7 +96,7 @@
         android:defaultValue="true"
         android:persistent="true" />
 
-    <SwitchPreferenceCompat
+    <SwitchPreference
         android:key="pref_allow_wallpaper_scrolling"
         android:title="@string/allow_wallpaper_scrolling"
         android:summary="@string/allow_wallpaper_scrolling_summary"
