--- a/res/xml/launcher_misc_preferences.xml
+++ b/res/xml/launcher_misc_preferences.xml
@@ -27,11 +27,14 @@
         android:persistent="true"
         launcher:logIdOn="615"
         launcher:logIdOff="616"
-        launcher:iconSpaceReserved="false" />
+        launcher:iconSpaceReserved="false"
+        launcher:layout="@layout/afl_preference_top" />
 
     <Preference
         android:key="pref_trust_apps"
-        android:title="@string/trust_apps_manager_name" />
+        android:title="@string/trust_apps_manager_name"
+        android:summary="@string/trust_apps_manager_name_summary"
+        launcher:layout="@layout/afl_preference_bottom" />
 
      <com.android.launcher3.settings.preferences.CustomSeekBarPreference
         android:key="pref_blur_depth"
@@ -54,6 +57,7 @@
     <com.android.launcher3.settings.preference.RestartPreference
         android:key="pref_restart"
         android:title="@string/pref_restart_title"
-        android:summary="@string/pref_restart_summary" />
+        android:summary="@string/pref_restart_summary"
+        launcher:layout="@layout/afl_preference_single" />
 
 </androidx.preference.PreferenceScreen>
