--- a/res/xml/launcher_app_drawer_preferences.xml
+++ b/res/xml/launcher_app_drawer_preferences.xml
@@ -24,16 +24,19 @@
         android:title="@string/drawer_search_title"
         android:summary="@string/drawer_search_summary"
         android:defaultValue="true"
-        launcher:iconSpaceReserved="false" />
+        launcher:iconSpaceReserved="false"
+        launcher:layout="@layout/afl_preference_top" />
 
-    <SwitchPreference
+   <SwitchPreference
         android:key="pref_drawer_show_labels"
         android:title="@string/drawer_show_labels"
+        android:summary="@string/drawer_show_labels_summary"
         android:defaultValue="true"
         android:persistent="true"
-        launcher:iconSpaceReserved="false" />
+        launcher:iconSpaceReserved="false"
+        launcher:layout="@layout/afl_preference_bottom" />
 
-    <com.android.launcher3.settings.preferences.CustomSeekBarPreference
+   <com.android.launcher3.settings.preferences.CustomSeekBarPreference
         android:key="pref_app_drawer_opacity"
         android:title="@string/background_opacity_title"
         android:persistent="true"
@@ -42,7 +45,7 @@
         settings:units="%"
         android:defaultValue="80" />
 
-    <com.android.launcher3.settings.preferences.CustomSeekBarPreference
+   <com.android.launcher3.settings.preferences.CustomSeekBarPreference
         android:key="pref_row_height"
         android:title="@string/row_height_title"
         android:persistent="true"
