--- a/res/xml/launcher_icons_preferences.xml
+++ b/res/xml/launcher_icons_preferences.xml
@@ -21,18 +21,21 @@
 
     <Preference
         android:key="pref_icon_pack"
-        android:title="@string/icon_pack_title" />
+        android:title="@string/icon_pack_title"
+        launcher:layout="@layout/afl_preference_top" />
 
     <Preference
         android:key="themed_icon_pack"
-        android:title="@string/themed_icons_category_title" />
+        android:title="@string/themed_icons_category_title"
+        launcher:layout="@layout/afl_preference_bottom" />
 
     <SwitchPreferenceCompat
         android:key="pref_allapps_themed_icons"
         android:title="@string/pref_themed_icons_title"
         android:summary="@string/pref_themed_icons_summary"
         android:persistent="true"
-        launcher:iconSpaceReserved="false" />
+        launcher:iconSpaceReserved="false"
+        launcher:layout="@layout/afl_preference_top" />
 
     <SwitchPreferenceCompat
         android:key="pref_forced_monochrome_icons"
@@ -40,13 +43,15 @@
         android:summary="@string/pref_force_monochrome_themed_icons_summary"
         android:defaultValue="false"
         android:persistent="true"
-        launcher:iconSpaceReserved="false" />
+        launcher:iconSpaceReserved="false"
+        launcher:layout="@layout/afl_preference_bottom"/>
 
     <com.android.launcher3.settings.NotificationDotsPreference
         android:key="pref_icon_badging"
         android:title="@string/notification_dots_title"
         android:persistent="false"
-        android:widgetLayout="@layout/notification_pref_warning" />
+        android:widgetLayout="@layout/notification_pref_warning"
+        launcher:layout="@layout/afl_preference_single" />
 
     <com.android.launcher3.settings.preferences.CustomSeekBarPreference
         android:key="pref_custom_icon_size"
